src/objects/Trade_Ally_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Trade Ally Certifications</relationshipLabel>
        <relationshipName>Trade_Ally_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Trade Ally Certifications</relationshipLabel>
        <relationshipName>Trade_Ally_Certifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <label>Trade Ally</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must enter a Trade Ally</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trade Ally</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally Certifications</relationshipLabel>
        <relationshipName>Trade_Ally_Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trade Ally Certification</label>
    <nameField>
        <displayFormat>TACN-{000000}</displayFormat>
        <label>Trade Ally Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ally Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>